LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/Loan_Calculator_Setting__c.object-meta.xml
<CustomObject>
    <label>Loan Calculator Setting</label>
    <nameField>
        <label>Loan Calculator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Calculator Setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>