LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Albania__c.field-meta.xml
<CustomField>
    <fullName>Albania__c</fullName>
    <label>Albania</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>