LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Algena__c.field-meta.xml
<CustomField>
    <fullName>Algena__c</fullName>
    <label>Algena</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>