LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Algena_Couple_del__c.field-meta.xml
<CustomField>
    <fullName>Algena_Couple_del__c</fullName>
    <label>Algena Couple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>