LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Argentina__c.field-meta.xml
<CustomField>
    <fullName>Argentina__c</fullName>
    <label>Argentina</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>