LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Argentina_Couple_del__c.field-meta.xml
<CustomField>
    <fullName>Argentina_Couple_del__c</fullName>
    <label>Argentina Couple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>