LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Armenia__c.field-meta.xml
<CustomField>
    <fullName>Armenia__c</fullName>
    <label>Armenia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>