LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Azerbaijan__c.field-meta.xml
<CustomField>
    <fullName>Azerbaijan__c</fullName>
    <label>Azerbaijan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>