LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Bahamas__c.field-meta.xml
<CustomField>
    <fullName>Bahamas__c</fullName>
    <label>Bahamas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>