LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Bahrain__c.field-meta.xml
<CustomField>
    <fullName>Bahrain__c</fullName>
    <label>Bahrain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>