LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Bangladesh__c.field-meta.xml
<CustomField>
    <fullName>Bangladesh__c</fullName>
    <label>Bangladesh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>