LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Basnia_and_Hevzegovina__c.field-meta.xml
<CustomField>
    <fullName>Basnia_and_Hevzegovina__c</fullName>
    <label>Basnia and Hevzegovina</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>