LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Belgium__c.field-meta.xml
<CustomField>
    <fullName>Belgium__c</fullName>
    <label>Belgium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>