LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Bermuda__c.field-meta.xml
<CustomField>
    <fullName>Bermuda__c</fullName>
    <label>Bermuda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>