LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Bolivia__c.field-meta.xml
<CustomField>
    <fullName>Bolivia__c</fullName>
    <label>Bolivia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>