LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Brazil__c.field-meta.xml
<CustomField>
    <fullName>Brazil__c</fullName>
    <label>Brazil</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>