LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Brelize__c.field-meta.xml
<CustomField>
    <fullName>Brelize__c</fullName>
    <label>Brelize</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>