LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Brlarus__c.field-meta.xml
<CustomField>
    <fullName>Brlarus__c</fullName>
    <label>Brlarus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>