LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Bulgaria__c.field-meta.xml
<CustomField>
    <fullName>Bulgaria__c</fullName>
    <label>Bulgaria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>