LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Cambodia__c.field-meta.xml
<CustomField>
    <fullName>Cambodia__c</fullName>
    <label>Cambodia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>