LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Canada__c.field-meta.xml
<CustomField>
    <fullName>Canada__c</fullName>
    <label>Canada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>