LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Casta_Rica__c.field-meta.xml
<CustomField>
    <fullName>Casta_Rica__c</fullName>
    <label>Casta Rica</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>