LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Chile__c.field-meta.xml
<CustomField>
    <fullName>Chile__c</fullName>
    <label>Chile</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>