LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/China__c.field-meta.xml
<CustomField>
    <fullName>China__c</fullName>
    <label>China</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>