LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Colombia__c.field-meta.xml
<CustomField>
    <fullName>Colombia__c</fullName>
    <label>Colombia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>