LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Country_Based_On_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Country_Based_On_Calculation__c</fullName>
    <label>Country Based On Calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>