LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Country_Based_On_Calculation_c__c.field-meta.xml
<CustomField>
    <fullName>Country_Based_On_Calculation_c__c</fullName>
    <label>Country Based On Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>