LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Cyprus__c.field-meta.xml
<CustomField>
    <fullName>Cyprus__c</fullName>
    <label>Cyprus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>