LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Czech__c.field-meta.xml
<CustomField>
    <fullName>Czech__c</fullName>
    <label>Czech</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>