LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/DefaultForBCS__c.field-meta.xml
<CustomField>
    <fullName>DefaultForBCS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DefaultForBCS</label>
    <type>Checkbox</type>
</CustomField>