LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Denmark__c.field-meta.xml
<CustomField>
    <fullName>Denmark__c</fullName>
    <label>Denmark</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>