LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Dominican_Republic__c.field-meta.xml
<CustomField>
    <fullName>Dominican_Republic__c</fullName>
    <label>Dominican Republic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>