LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Ecuador__c.field-meta.xml
<CustomField>
    <fullName>Ecuador__c</fullName>
    <label>Ecuador</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>