LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Egypt__c.field-meta.xml
<CustomField>
    <fullName>Egypt__c</fullName>
    <label>Egypt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>