LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Egypt_Couple__c.field-meta.xml
<CustomField>
    <fullName>Egypt_Couple__c</fullName>
    <label>Egypt Couple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>