LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/EI_Salvadon__c.field-meta.xml
<CustomField>
    <fullName>EI_Salvadon__c</fullName>
    <label>EI Salvadon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>