LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/EI_Salvadon_Couple__c.field-meta.xml
<CustomField>
    <fullName>EI_Salvadon_Couple__c</fullName>
    <label>EI Salvadon Couple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>