LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Ethiopia__c.field-meta.xml
<CustomField>
    <fullName>Ethiopia__c</fullName>
    <label>Ethiopia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>