LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Fiji__c.field-meta.xml
<CustomField>
    <fullName>Fiji__c</fullName>
    <label>Fiji</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>