LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Finland__c.field-meta.xml
<CustomField>
    <fullName>Finland__c</fullName>
    <label>Finland</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>