LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Georgia__c.field-meta.xml
<CustomField>
    <fullName>Georgia__c</fullName>
    <label>Georgia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>