LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Germany__c.field-meta.xml
<CustomField>
    <fullName>Germany__c</fullName>
    <label>Germany</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>