LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Ghana__c.field-meta.xml
<CustomField>
    <fullName>Ghana__c</fullName>
    <label>Ghana</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>