LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Greece__c.field-meta.xml
<CustomField>
    <fullName>Greece__c</fullName>
    <label>Greece</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>