LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Guatemala__c.field-meta.xml
<CustomField>
    <fullName>Guatemala__c</fullName>
    <label>Guatemala</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>