LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Honduras__c.field-meta.xml
<CustomField>
    <fullName>Honduras__c</fullName>
    <label>Honduras</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>