LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Hong_Kong__c.field-meta.xml
<CustomField>
    <fullName>Hong_Kong__c</fullName>
    <label>Hong Kong</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>