LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Hong_Kong_Couple__c.field-meta.xml
<CustomField>
    <fullName>Hong_Kong_Couple__c</fullName>
    <label>Hong Kong Couple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>