LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Iceland__c.field-meta.xml
<CustomField>
    <fullName>Iceland__c</fullName>
    <label>Iceland</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>