LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/India__c.field-meta.xml
<CustomField>
    <fullName>India__c</fullName>
    <label>India</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>