LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Indonesia__c.field-meta.xml
<CustomField>
    <fullName>Indonesia__c</fullName>
    <label>Indonesia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>