LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Iran__c.field-meta.xml
<CustomField>
    <fullName>Iran__c</fullName>
    <label>Iran</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>