LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Iraq__c.field-meta.xml
<CustomField>
    <fullName>Iraq__c</fullName>
    <label>Iraq</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>