LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Ireland__c.field-meta.xml
<CustomField>
    <fullName>Ireland__c</fullName>
    <label>Ireland</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>