LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Israil__c.field-meta.xml
<CustomField>
    <fullName>Israil__c</fullName>
    <label>Israil</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>