LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Italy_Couple__c.field-meta.xml
<CustomField>
    <fullName>Italy_Couple__c</fullName>
    <label>Italy Couple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>