LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Jamaica__c.field-meta.xml
<CustomField>
    <fullName>Jamaica__c</fullName>
    <label>Jamaica</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>