LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Japan__c.field-meta.xml
<CustomField>
    <fullName>Japan__c</fullName>
    <label>Japan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>