LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Jordan__c.field-meta.xml
<CustomField>
    <fullName>Jordan__c</fullName>
    <label>Jordan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>