LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Kazakhstan__c.field-meta.xml
<CustomField>
    <fullName>Kazakhstan__c</fullName>
    <label>Kazakhstan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>