LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Kenya__c.field-meta.xml
<CustomField>
    <fullName>Kenya__c</fullName>
    <label>Kenya</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>