LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Kuwait__c.field-meta.xml
<CustomField>
    <fullName>Kuwait__c</fullName>
    <label>Kuwait</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>