LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Latvia__c.field-meta.xml
<CustomField>
    <fullName>Latvia__c</fullName>
    <label>Latvia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>