LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Lebanon__c.field-meta.xml
<CustomField>
    <fullName>Lebanon__c</fullName>
    <label>Lebanon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>