LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Libya__c.field-meta.xml
<CustomField>
    <fullName>Libya__c</fullName>
    <label>Libya</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>