LMS/force-app/main/default/objects/Loan_Calculator_Setting__c/fields/Lithuania__c.field-meta.xml
<CustomField>
    <fullName>Lithuania__c</fullName>
    <label>Lithuania</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>